# reflect

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SPEC.md  pyproject.toml  serve.py
.github/: copilot-instructions.md
.github/hooks/: otel-hooks.json
.github/workflows/: publish.yml  release.yml  test.yml
docs/: CNAME  ai-observability-schema.md  demo.html  index.html  mcp-agent-workflow.md  pricing-recommendations-spec.md  report.html  robots.txt  showcase.html  sitemap.xml
docs/reports/: showcase.json
docs/specs/: reflect-actionable-improvement-plan.md  reflect-sqlite-textual-checkpoint.md  reflect-sqlite-textual-spec.md
scripts/: bump_version.py  release_workflow.py
src/reflect/: __init__.py  config.py  context.py  core.py  cost_aliases.py  dashboard.py  gateway.py  graph.py  insights.py  inspection.py  instrumentation.py  mcp.py  models.py  parsing.py  preparation.py  pricing.py  processing.py  report.py  report_server.py  session_adapters.py  shell_completion.py  skill_extraction.py  task_runs.py  terminal.py  usage.py  utils.py
tests/: conftest.py  test_agent_inspection.py  test_analyze_telemetry.py  test_calculations.py  test_cli.py  test_config.py  test_dashboard_json.py  test_dashboard_sql_api.py  test_dashboard_static_assets.py  test_gateway.py  test_graph_analysis.py  test_helpers.py  test_insights_profile.py  test_insights_scoring.py  test_insights_session.py  test_insights_signals.py  test_landing_page.py  test_parsing.py  test_preparation.py  test_pricing.py  test_process_span.py  test_readme.py  test_release_workflow.py  test_report_server.py  test_session_adapters.py  test_shell_completion.py  test_skill_helpers.py  test_skill_integration.py  test_terminal_rendering.py  test_usage.py  test_utils.py
tests/improvements/: test_recurring_commands.py  test_rules.py  test_service.py  test_skills_loops_cli.py  test_skills_v2.py
tests/memory/: test_memory_mcp.py  test_memory_provider.py  test_omega_provider.py
tests/schema/: test_schema_models.py
tests/session_rules/: test_session_rules.py
tests/store/: test_graph_normalize.py  test_hook_facts.py  test_ingest.py  test_instruction_memory.py  test_mcp.py  test_migrate.py  test_normalize.py  test_rollups.py  (+2 more)
(+90 files in other folders)
